[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=2.19.1",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.1.6",
    "mlflow>=3.13.0",
    "peft>=0.19.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
